--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,15 +36,15 @@ dependencies:
   get: ^4.6.5
   get_storage: ^2.0.3
   dio: ^5.0.0
-  intl: ^0.18.0
+  # intl: ^0.18.0
   flutter_svg: ^2.0.1
   cached_network_image: ^3.2.3
-  permission_handler: ^10.2.0
-  device_info_plus: ^8.1.0
-  package_info_plus: ^3.0.3
-  percent_indicator: ^4.2.2
+  # permission_handler: ^10.2.0
+  # device_info_plus: ^8.1.0
+  # package_info_plus: ^3.0.3
+  # percent_indicator: ^4.2.2
   sizer: ^2.0.15
-  smooth_page_indicator: ^1.1.0
+  # smooth_page_indicator: ^1.1.0
   url_launcher: ^6.1.4
   webview_flutter: ^4.2.2
   share_plus: ^7.2.1
@@ -53,9 +53,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   shimmer: ^3.0.0
-  flutter_rating_bar: ^4.0.1
-  email_validator: ^2.1.17
-  connectivity_plus: ^5.0.1
+  # flutter_rating_bar: ^4.0.1
+  # email_validator: ^2.1.17
+  # connectivity_plus: ^5.0.1
   internet_connection_checker: ^1.0.0+1
 
 
